Added a alloc heavy benchark that shows 95%+ burn in allocation (with native frames, goes without saying)